--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=23543f7e7f7f9c7a67bb414af0b48923"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=23543f7e7f7f9c7a67bb414af0b48923&libraries=services,clusterer,drawing"
     ></script>
   </body>
 </html>
