--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/heart_pink.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ara-sangkwon</title>
+    <meta
+      name="description"
+      property="og:description"
+      content="아라와 상권의 추억"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/heart_pink.svg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
